fix layour on mobile

--- a/_assets/stylesheets/style.css.sass
+++ b/_assets/stylesheets/style.css.sass
@@ -14,6 +14,9 @@ a:hover
 #content
   margin-left: 0
 
+#extensions
+  overflow: scroll
+
 h1.title a
   color: #000
 
